@@ -137,6 +137,7 @@ export("+.section",
        "pressure<-",
        tdrPatm,
        tdrTrim,
+       prettyPosition,
        pwelch,
        rangeLimit,
        read.adp,
@@ -169,7 +170,6 @@ export("+.section",
        retime,
        roll,
        "roll<-",
-       roundPosition,
        secondsToCtime,
        resizableLabel,
        salinity,
