@@ -1,4 +1,6 @@
 0.8-8
+- plot.coastline(): improve argument 'geographical'
+- add prettyPosition()
 - add grad()
 - add (preliminary) support for the TEOS-10 library, which must be installed separately
 - add integrateTrapezoid()
